Shang New Live/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>IOps</fullName>
                </value>
                <value>
                    <fullName>No Access</fullName>
                </value>
                <value>
                    <fullName>SF &amp; iOPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR(TODAY())- YEAR( Birthdate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Leave__c</fullName>
        <label>Annual Leave</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Access__c</fullName>
        <label>App Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>App</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attrition_Type__c</fullName>
        <label>Attrition Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
                <value>
                    <fullName>Involuntary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bonus_Mths__c</fullName>
        <inlineHelpText>Measured in terms of number of months</inlineHelpText>
        <label>Bonus (Months)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Career_Interest__c</fullName>
        <label>Career Interest</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chinese_Name_PinYin__c</fullName>
        <label>Chinese Name (PinYin)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chinese_Name__c</fullName>
        <label>Chinese Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Hotel_Name__c</fullName>
        <label>Company/Hotel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>SLIM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Roles__c</fullName>
        <label>Contact Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin Director</fullName>
                </value>
                <value>
                    <fullName>Brand Manager</fullName>
                </value>
                <value>
                    <fullName>Chairman</fullName>
                </value>
                <value>
                    <fullName>Cleaner</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Executive Director</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>General Manager</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>Operation Manager</fullName>
                </value>
                <value>
                    <fullName>Senior Accountant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Period__c</fullName>
        <label>Contract Period (Years)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency_of_Salary__c</fullName>
        <label>Currency of Salary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Join__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date Join</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Offer__c</fullName>
        <label>Date of Offer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Performance_Review__c</fullName>
        <label>Date of Performance Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Position_Opening__c</fullName>
        <label>Date of Position Opening</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Applied__c</fullName>
        <label>Days Applied</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device_Setting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Device Setting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date_Termination__c</fullName>
        <label>Effective Date of Termination</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Number__c</fullName>
        <label>Emergency Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Person__c</fullName>
        <label>Emergency Contact Person</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Expat</fullName>
                </value>
                <value>
                    <fullName>NRC</fullName>
                </value>
                <value>
                    <fullName>Local+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <label>Employment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FTE</fullName>
                </value>
                <value>
                    <fullName>PTE</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnic_Group__c</fullName>
        <label>Ethnic Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highest_Qualification__c</fullName>
        <label>Highest Qualification</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hiring_Reason__c</fullName>
        <label>Hiring Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Hire</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact_of_Loss__c</fullName>
        <label>Impact of Loss</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scale_of_Five</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Company_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A-A- Corp Officer</fullName>
                </value>
                <value>
                    <fullName>A-B- Corp Officer</fullName>
                </value>
                <value>
                    <fullName>B1- Corp Sr Manager I</fullName>
                </value>
                <value>
                    <fullName>B2- Corp Sr Manager II</fullName>
                </value>
                <value>
                    <fullName>C1- Corp Manager I</fullName>
                </value>
                <value>
                    <fullName>C2- Corp Manager II</fullName>
                </value>
                <value>
                    <fullName>D1- Corp Staff I</fullName>
                </value>
                <value>
                    <fullName>D2- Corp Staff II</fullName>
                </value>
                <value>
                    <fullName>General Manager</fullName>
                </value>
                <value>
                    <fullName>Level 1- Service Executive</fullName>
                </value>
                <value>
                    <fullName>Level 2- Sr Service Manager</fullName>
                </value>
                <value>
                    <fullName>Level 3- Service Manager</fullName>
                </value>
                <value>
                    <fullName>Level 4- Service Leader</fullName>
                </value>
                <value>
                    <fullName>Level 5- Service Associate</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>Cantonese</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Latest_Performance_Rating__c</fullName>
        <label>Latest Performance Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scale_of_Five</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leave_Approval_Status__c</fullName>
        <label>Leave Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Left_for_Which_Company__c</fullName>
        <label>Left for Which Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Likelihood_of_Vacancy__c</fullName>
        <label>Likelihood of Vacancy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scale_of_Five</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locker_Number__c</fullName>
        <label>Locker Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Married with Children</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meal_Type__c</fullName>
        <label>Meal Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobility__c</fullName>
        <label>Mobility</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Allowance__c</fullName>
        <label>Monthly Allowance</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Base_Salary__c</fullName>
        <label>Monthly Base Salary</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Movement_Effective_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Movement Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NRIC__c</fullName>
        <label>NRIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghan</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Algerian</fullName>
                </value>
                <value>
                    <fullName>American</fullName>
                </value>
                <value>
                    <fullName>Andorran</fullName>
                </value>
                <value>
                    <fullName>Angolan</fullName>
                </value>
                <value>
                    <fullName>Antiguans</fullName>
                </value>
                <value>
                    <fullName>Argentinean</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Australian</fullName>
                </value>
                <value>
                    <fullName>Austrian</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani</fullName>
                </value>
                <value>
                    <fullName>Bahamian</fullName>
                </value>
                <value>
                    <fullName>Bahraini</fullName>
                </value>
                <value>
                    <fullName>Bangladeshi</fullName>
                </value>
                <value>
                    <fullName>Barbadian</fullName>
                </value>
                <value>
                    <fullName>Barbudans</fullName>
                </value>
                <value>
                    <fullName>Batswana</fullName>
                </value>
                <value>
                    <fullName>Belarusian</fullName>
                </value>
                <value>
                    <fullName>Belgian</fullName>
                </value>
                <value>
                    <fullName>Belizean</fullName>
                </value>
                <value>
                    <fullName>Beninese</fullName>
                </value>
                <value>
                    <fullName>Bhutanese</fullName>
                </value>
                <value>
                    <fullName>Bolivian</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Brazilian</fullName>
                </value>
                <value>
                    <fullName>British</fullName>
                </value>
                <value>
                    <fullName>Bruneian</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Burkinabe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Native_Place__c</fullName>
        <label>Native Place</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01.汉族</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nominated_Successor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nominated Successor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Nominated Successor</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Passport_Expiry_Date__c</fullName>
        <label>Passport Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_Number__c</fullName>
        <label>Passport Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_Type__c</fullName>
        <label>Passport Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Probation_End_Date__c</fullName>
        <label>Probation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Probation_Status__c</fullName>
        <label>Probation Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Picture_Image__c</fullName>
        <formula>IF( ISBLANK( Profile_Picture_Url__c ) ,&quot;&quot;, IMAGE(Profile_Picture_Url__c , &quot;Icon&quot;, 75,75) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Picture_Url__c</fullName>
        <label>Profile Picture Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Public_Contact_Info__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Public Contact Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_hire_Eligibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-hire Eligibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reasons_for_Leaving__c</fullName>
        <label>Reasons for Leaving</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruitment_Days__c</fullName>
        <label>Recruitment Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recruitment_Status__c</fullName>
        <label>Recruitment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East Bago</fullName>
                </value>
                <value>
                    <fullName>West Bago</fullName>
                </value>
                <value>
                    <fullName>Yangon</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revoke__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revoke</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AMS User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employed</fullName>
                </value>
                <value>
                    <fullName>Resigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Union__c</fullName>
        <label>Union</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_Expiry_Date__c</fullName>
        <label>Visa Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visa_Number__c</fullName>
        <label>Visa Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_Type__c</fullName>
        <label>Visa Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision__c</fullName>
        <label>Vision</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Experience__c</fullName>
        <label>Work Experience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Hours__c</fullName>
        <label>Work Hours Per Week</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_of_Service__c</fullName>
        <formula>IF(ISBLANK(Effective_Date_Termination__c) , ( YEAR(TODAY())- YEAR( Date_Join__c )), (YEAR( Effective_Date_Termination__c ) - YEAR( Date_Join__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years of Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Contact</value>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>AllStaffs</fullName>
        <columns>Company_Hotel_Name__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Division__c</columns>
        <columns>CONTACT.DEPARTMENT</columns>
        <columns>Employment_Type__c</columns>
        <columns>Years_of_Service__c</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Emergency_Contact_Number__c</columns>
        <columns>Employment_Status__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Staff</value>
        </filters>
        <label>All Staffs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff</fullName>
        <active>true</active>
        <label>Staff</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>